# engram-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENGRAM_SPECIFICATION.md  LICENSE  README.md  README.txt  SPECIFICATION-FULL.md  TESTING_PHASE_1.3_SIGNATURES.md  TESTING_PHASE_1.4_ENCRYPTION.md  TESTING_PHASE_3_PERFORMANCE.md  TESTING_PHASE_4_SECURITY.md  TESTING_PLAN.md  test_output.txt
.github/workflows/: ci.yml  publish.yml
crates/engram-core/: Cargo.toml
crates/engram-core/src/: error.rs  format.rs  lib.rs  reader.rs  tests.rs  writer.rs
crates/engram-vfs/: Cargo.toml
crates/engram-vfs/src/: error.rs  lib.rs
docs/: DESIGN_ENCRYPTION_AND_FIXES.md  ISSUES.md  SPEC.md  TESTING_PHASE_1.1_FINDINGS.md  TESTING_PHASE_1.2_FUZZING.md  TESTING_PHASE_2_CONCURRENCY.md  engram_architecture_clarification.md  engram_compression_spec_v0.2.md  engram_design_rationale.md  engram_elevator_pitch.md  engram_format_theory.md
examples/: basic.rs  compression.rs  manifest.rs  vfs.rs
fuzz/: Cargo.toml  generate_seeds.rs
fuzz/fuzz_targets/: fuzz_archive_parse.rs
src/: compat.rs  error.rs  lib.rs  manifest.rs  vfs.rs
src/archive/: end_record.rs  format.rs  frame_compression.rs  local_entry.rs  mod.rs  reader.rs  writer.rs
tests/: compression_validation_test.rs  concurrency_readers_test.rs  concurrency_vfs_test.rs  corruption_test.rs  crash_recovery_test.rs  debug_zero_length.rs  debug_zero_length_hex.rs  encryption_security_test.rs  frame_compression_test.rs  integration_test.rs  security_crypto_attacks_test.rs  security_path_traversal_test.rs  security_zip_bomb_test.rs  signature_security_test.rs  stress_large_archives_test.rs  v1_features_test.rs
