[workspace]
members = ["crates/engram-core", "crates/engram-vfs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Magnus Trent"]
license = "MIT"
repository = "https://github.com/Manifest-Humanity/engram-core"

[workspace.dependencies]
# Shared dependencies
thiserror = "1.0"
crc32fast = "1.4"
lz4_flex = "0.11"
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
