[package]
name = "engram-rs"
version = "1.0.0"
edition = "2021"
authors = ["Blackfall Labs"]
license = "MIT"
description = "Unified engram archive library with manifest, signatures, and VFS support"
repository = "https://github.com/blackfall-labs/engram-rs"
homepage = "https://github.com/blackfall-labs/engram-rs"
documentation = "https://docs.rs/engram-rs"
readme = "README.md"
keywords = ["archive", "compression", "cryptography", "signature", "vfs"]
categories = ["compression", "cryptography", "database", "filesystem"]

[dependencies]
# Compression
lz4_flex = "0.11"
zstd = "0.13"
crc32fast = "1.4"

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
tracing = "0.1"
tempfile = "3.12"

[dev-dependencies]
