[package]
name = "engram-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3.12"

[dependencies.engram-rs]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_archive_parse"
path = "fuzz_targets/fuzz_archive_parse.rs"
test = false
doc = false
bench = false
