[package]
name = "engram-vfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engram-core = { path = "../engram-core" }
rusqlite = { workspace = true, features = ["backup"] }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.8"
